changes in html file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
-<h1>hii this is seema</h1>
-<p>this is feature paragraph
-    
-</p>
+<h1>hii this is seemamn</h1>
+<p>this is feature paragraph</p>
